Bug 148448 - Warning is unreadable in Mail Merge Wizard in dark mode
Summary: Warning is unreadable in Mail Merge Wizard in dark mode
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.4.0
Keywords:
Depends on:
Blocks: Linux-Dark-Mode
  Show dependency treegraph
 
Reported: 2022-04-07 14:51 UTC by Mike Kaganski
Modified: 2022-04-15 14:18 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the problematic dialog (11.21 KB, image/png)
2022-04-07 14:51 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2022-04-07 14:51:28 UTC
Created attachment 179378 [details]
Screenshot of the problematic dialog

0. Use current master configured in dark mode on Windows.
1. Download attachment 164380 [details] from bug 135844, and open its ODT in Writer.
2. Open Tools -> Mail Merge Wizard, and see that the first page shows an unreadable warning ("Data source of the current document is not registered. Please exchange database.")
Comment 1 Caolán McNamara 2022-04-07 15:03:03 UTC
the same is true in the gtk dark mode. These is a weld::LabelType::Warning and we have handlers for that in vcl/source/app/salvtables.cxx and vcl/unx/gtk3/gtkinst.cxx which just pick "yellow" for the background. Beside them for Error and/or Title we pick something more sensible from the system theme but for "Warning" its a (inherited from the past IIRC) hard coded yellow.
Comment 2 Heiko Tietze 2022-04-08 07:28:08 UTC
Caolan, fixed with https://gerrit.libreoffice.org/c/core/+/132684?
Comment 3 Caolán McNamara 2022-04-08 07:50:16 UTC
not the original reported problem of windows dark mode, the commit solves the similar gtk one and gives a route to fix the windows one, but its still always COL_YELLOW for windows after that commit
Comment 4 Commit Notification 2022-04-15 14:17:12 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a0f9f8ddaaa4ca14c9cc37259e2ac5dce63b3c77

tdf#148448 pick a warning color more likely to be readable in dark theme

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2022-04-15 14:18:40 UTC
couldn't see anything good to take a warning color from, so in the end just picked a color I could read it with as a background