Related: tdf#148448 add a separate WarningColor settings

instead of a hard-coded yellow. For gtk we can use the named color
"warning_color" to populate it: https://docs.gtk.org/gtk4/css-properties.html

Change-Id: I538bffdc0f6286c78a08cef649fa8a074a6510ef